// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should accept an active property for the toggle button type 1`] = `
<button
  aria-pressed="true"
  class="dusk-button dusk-button--type--toggle dusk-button--variant--primary dusk-button--size--normal dusk-button--type--toggle--active"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;

exports[`Button > should be able to render a button with an icon and text 1`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal dusk-icon-button-labeled"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
   
  <svg
    class="dusk-icon dusk-icon--size--normal dusk-button__icon"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
    />
  </svg>
  
  <!--&lt;Icon&gt;-->
</button>
`;

exports[`Button > should be able to render a button with an icon and text 2`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal dusk-icon-button-labeled"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
   
  <svg
    class="dusk-icon dusk-icon--size--normal dusk-button__icon"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
    />
  </svg>
  
  <!--&lt;Icon&gt;-->
</button>
`;

exports[`Button > should be able to render a button with an icon only 1`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal dusk-icon-button"
  type="button"
>
   
  <svg
    class="dusk-icon dusk-icon--size--normal dusk-button__icon"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
    />
  </svg>
  
  <!--&lt;Icon&gt;-->
</button>
`;

exports[`Button > should be able to render a button with an icon only 2`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal dusk-icon-button"
  type="button"
>
   
  <svg
    class="dusk-icon dusk-icon--size--normal dusk-button__icon"
    role="graphics-symbol"
    viewBox="0 0 24 24"
  >
    <path
      d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
    />
  </svg>
  
  <!--&lt;Icon&gt;-->
</button>
`;

exports[`Button > should pass additional class names and attributes to the rendered element 1`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal foo bar"
  id="some-id"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;

exports[`Button > should render a button of the desired type 1`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;

exports[`Button > should render a button of the desired type 2`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;

exports[`Button > should render a button of the desired type 3`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;

exports[`Button > should render a button of the desired type 4`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;

exports[`Button > should render a button without a text 1`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
  type="button"
/>
`;

exports[`Button > should render the Button component using the type "button" as a default 1`] = `
<button
  class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--normal"
  type="button"
>
  <span
    class="dusk-button__text"
  >
    some text
  </span>
</button>
`;
